# zellij-pane-tracker

./: .gitignore  AGENTS.md  Cargo.toml  FORUM_POST.md  LICENSE  README.md  build.sh  zjall-enhanced.zsh
mcp-server/: bun.lockb  index.ts  package.json
scripts/: zjdump
src/: lib.rs  main.rs
