[package]
name = "zellij-pane-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Nakul Tiruviluamala <nakul@theslyprofessor.com>"]
description = "Zellij plugin that exports pane names to a JSON file for shell integration"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
zellij-tile = "0.40.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = "z"
strip = true
